--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p class="subtitle">Tableau des streamers en direct (mise à jour auto)</p>
     <section id="organizers">
       <h2>Organisateur·rice·s</h2>
-      <div id="organizers-list" class="streamer-grid"></div>
+      <div id="organizers-list" class="streamer-grid organizers-grid"></div>
     </section>
 
     <section id="participants-live">
